--- a/siteWeb/css/business-casual.css
+++ b/siteWeb/css/business-casual.css
@@ -48,6 +48,10 @@ h1 {
   background-color: rgba(255, 255, 255, 0.80);
 
 }
+.bg-blue {
+  background-color: rgba(104, 102, 103, 0.61);
+  border: #292b2c
+}
 
 .bg-overlay {
   background-color: rgba(0, 0, 0, 0.7);
