--- a/siteWeb/css/main2.css
+++ b/siteWeb/css/main2.css
@@ -525,7 +525,7 @@ th, td {
   background-color: #cccccc;
 }
 input[type=text] {
-    width: 130px;
+    width: 50%;
     box-sizing: border-box;
     border: 2px solid #ccc;
     border-radius: 4px;
