--- a/siteWeb/public/css/main2.css
+++ b/siteWeb/public/css/main2.css
@@ -524,21 +524,15 @@ th, td {
 .table100.ver5 .ps__rail-y .ps__thumb-y::before {
   background-color: #cccccc;
 }
-input[type=text] {
-    width: 50%;
-    box-sizing: border-box;
-    border: 2px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
-    background-color: white;
-    background-image: url('searchicon.png');
-    background-position: 10px 10px; 
-    background-repeat: no-repeat;
-    padding: 12px 20px 12px 40px;
-    -webkit-transition: width 0.4s ease-in-out;
-    transition: width 0.4s ease-in-out;
+.searchLable {
+    float: left;
+	color: white;
 }
-
-input[type=text]:focus {
-    width: 100%;
+span {
+    display: block;
+    overflow: hidden;
+    padding: 0 4px 0 6px
+}
+.searchinput{
+    width: 100%
 }
