--- a/siteWeb/public/css/main2.css
+++ b/siteWeb/public/css/main2.css
@@ -526,7 +526,8 @@ th, td {
 }
 .searchLable {
     float: left;
-	color: white;
+  color: white;
+  padding-top: 15px;
 }
 span {
     display: block;
@@ -535,4 +536,18 @@ span {
 }
 .searchinput{
     width: 100%
+}
+.form-control {
+  display: block;
+  width: 30%;
+  padding: .5rem .75rem;
+  font-size: 1rem;
+  line-height: 1.25;
+  color: #495057;
+  background-color: #fff;
+  background-image: none;
+  background-clip: padding-box;
+  border: 1px solid rgba(0,0,0,.15);
+  border-radius: .25rem;
+  transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 }
